--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       cursor: pointer;
     }
     #contact button:hover {
-      background-color: #005bb5;
+      background-color: blue;
     }
   </style>
 </head>
