--- a/index.html
+++ b/index.html
@@ -1,47 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="assets/css/styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet" />
   <title>My Personal Portfolio</title>
   <style>
     body {
-  font-family: 'Poppins', sans-serif;
-  background: linear-gradient(-45deg, #ff9a9e, #fad0c4, #fad0c4, #fbc2eb);
-  background-size: 400% 400%;
-  animation: gradientBG 15s ease infinite;
-  color: #333;
-}
+      font-family: 'Poppins', sans-serif;
+      background: rgba(0, 0, 0, 0.7);
+      background-image: url('https://i.imgur.com/MYk7E5V.jpg'); /* Optional background image */
+      background-size: cover;
+      background-attachment: fixed;
+      color: #fff;
+      margin: 0;
+      padding: 0;
+    }
 
-@keyframes gradientBG {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
+    h1, h2, .nav__logo {
+      font-family: 'Playfair Display', serif;
+    }
 
+    .nav__logo, .nav__link {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 600;
+    }
+
+    .nav__link:hover {
+      text-decoration: underline;
+    }
+
+    .home__title {
+      font-size: 3rem;
+      margin: 0.5rem 0;
+    }
+
+    .home__skill {
+      font-size: 1.5rem;
+      color: #ccc;
+    }
+
+    .home__button, button[type="submit"] {
+      background-color: #ff4081;
+      color: white;
+      border: none;
+      padding: 0.75rem 1.5rem;
+      border-radius: 30px;
+      cursor: pointer;
+      font-weight: 500;
+      transition: background 0.3s ease;
+    }
+
+    .home__button:hover, button[type="submit"]:hover {
+      background-color: #e91e63;
+    }
+
+    input, textarea {
+      width: 100%;
+      padding: 0.75rem;
+      margin: 0.5rem 0;
+      border: none;
+      border-radius: 8px;
+      font-family: 'Poppins', sans-serif;
+    }
+
+    form {
+      max-width: 500px;
+      margin: auto;
+    }
+
+    .section {
+      padding: 3rem 1rem;
+      background: rgba(0, 0, 0, 0.6);
+      border-radius: 20px;
+      margin: 2rem auto;
+      max-width: 800px;
+    }
+
+    .nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 2rem;
+      background-color: rgba(0, 0, 0, 0.8);
+    }
+
+    .nav__menu ul {
+      display: flex;
+      list-style: none;
+      gap: 1.5rem;
+    }
+
+    .home {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+      padding: 2rem;
+    }
+
+    .home__information {
+      max-width: 50%;
+    }
+
+    .home__img img {
+      max-width: 250px;
+      border-radius: 50%;
+      box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
+    }
+
+    .home__social {
+      margin-top: 1rem;
+    }
+
+    .home__social-icon {
+      font-size: 1.8rem;
+      margin-right: 1rem;
+      cursor: pointer;
+    }
+
+    @media (max-width: 768px) {
+      .home {
+        flex-direction: column;
+        align-items: center;
+      }
+      .home__information, .home__img {
+        max-width: 100%;
+        text-align: center;
+      }
+    }
   </style>
 </head>
 
 <body>
-  <!-- OVERLAY -->
-  <div class="overlay first"></div>
-  <div class="overlay second"></div>
-  <div class="overlay third"></div>
-
   <!-- HEADER -->
   <header class="l-header">
     <nav class="nav bd-grid">
-      <div>
-        <a href="#" class="nav__logo">Programmer</a>
-      </div>
+      <div><a href="#" class="nav__logo">Programmer</a></div>
       <div class="nav__menu" id="nav-menu">
         <ul class="nav__list">
           <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
@@ -50,9 +146,6 @@
           <li class="nav__item"><a href="#blog" class="nav__link">Blog</a></li>
           <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
         </ul>
-      </div>
-      <div class="nav__toggle" id="nav-toggle">
-        <ion-icon name="menu"></ion-icon>
       </div>
     </nav>
   </header>
@@ -64,15 +157,9 @@
         <span class="home__pressent Esg-text">Hello, My name is</span>
         <h1 class="home__title anime-text">Vern Esg</h1>
         <span class="home__skill anime-text">Web Developer</span>
-        <div>
-          <a href="#services" class="home__button anime-text">Bot Maker</a>
-        </div>
+        <div><a href="#services" class="home__button anime-text">Bot Maker</a></div>
       </div>
-
-      <div class="home__img">
-        <img src="https://i.imgur.com/bfELRaR.jpeg" alt="Profile Image" />
-      </div>
-
+      <div class="home__img"><img src="https://i.imgur.com/bfELRaR.jpeg" alt="Profile Image" /></div>
       <div class="home__social">
         <ion-icon name="logo-facebook" class="home__social-icon"></ion-icon>
         <ion-icon name="logo-instagram" class="home__social-icon"></ion-icon>
@@ -80,13 +167,12 @@
       </div>
     </div>
 
-    <!-- About Section -->
+    <!-- Sections -->
     <section id="about" class="section">
       <h2>About Me</h2>
       <p>I am Vern Esg, a passionate web developer who builds clean and creative websites.</p>
     </section>
 
-    <!-- Services Section -->
     <section id="services" class="section">
       <h2>Services</h2>
       <ul>
@@ -96,13 +182,11 @@
       </ul>
     </section>
 
-    <!-- Blog Section -->
     <section id="blog" class="section">
       <h2>Blog</h2>
       <p>Coming soon! Here I’ll share tips, tutorials, and insights into modern web development.</p>
     </section>
 
-    <!-- Contact Section -->
     <section id="contact" class="section">
       <h2>Contact</h2>
       <form action="https://formspree.io/f/your-form-id" method="POST">
@@ -113,12 +197,6 @@
       </form>
     </section>
   </main>
-
-  <!-- GSAP -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
-
-  <!-- MAIN -->
-  <script src="assets/js/main.js"></script>
 
   <!-- ICONS -->
   <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
