--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       font-family: 'Poppins', sans-serif;
       background: rgba(0, 0, 0, 0.7);
-      background-image: url('https://i.imgur.com/MYk7E5V.jpg'); /* Optional background image */
+      background-image: url('https://media3.giphy.com/media/1HUfqovo7QL594o5kh/giphy.gif?cid=6c09b952472ophwkrxnaxbkf1u9z7kik3zraii63t2z4q34g&ep=v1_internal_gif_by_id&rid=giphy.gif&ct=g'); /* Optional background image */
       background-size: cover;
       background-attachment: fixed;
       color: #fff;
