--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       font-family: 'Poppins', sans-serif;
       background: rgba(0, 0, 0, 0.7);
-      background-image: url('https://media3.giphy.com/media/1HUfqovo7QL594o5kh/giphy.gif?cid=6c09b952472ophwkrxnaxbkf1u9z7kik3zraii63t2z4q34g&ep=v1_internal_gif_by_id&rid=giphy.gif&ct=g'); /* Optional background image */
+      background-image: url('https://media3.giphy.com/media/1HUfqovo7QL594o5kh/giphy.gif?cid=6c09b952472ophwkrxnaxbkf1u9z7kik3zraii63t2z4q34g&ep=v1_internal_gif_by_id&rid=giphy.gif&ct=g');
       background-size: cover;
       background-attachment: fixed;
       color: #fff;
@@ -130,10 +130,50 @@
         text-align: center;
       }
     }
+
+    /* Animation */
+    @keyframes fadeInUp {
+      0% {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .anime-text, .section, .home__img img, .home__button {
+      animation: fadeInUp 1s ease forwards;
+      opacity: 0;
+    }
+
+    .anime-text:nth-child(1) { animation-delay: 0.2s; }
+    .anime-text:nth-child(2) { animation-delay: 0.4s; }
+    .anime-text:nth-child(3) { animation-delay: 0.6s; }
+
+    .music-toggle {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      z-index: 999;
+      background: #ff4081;
+      color: white;
+      padding: 0.5rem 1rem;
+      border: none;
+      border-radius: 30px;
+      cursor: pointer;
+      font-weight: 600;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
+    }
   </style>
 </head>
 
 <body>
+  <!-- Music toggle button -->
+  <audio id="bg-music" src="https://www.bensound.com/bensound-music/bensound-creativeminds.mp3" autoplay loop></audio>
+  <button class="music-toggle" onclick="toggleMusic()">Pause Music</button>
+
   <!-- HEADER -->
   <header class="l-header">
     <nav class="nav bd-grid">
@@ -154,7 +194,7 @@
   <main class="l-main bd-grid">
     <div class="home">
       <div class="home__information">
-        <span class="home__pressent Esg-text">Hello, My name is</span>
+        <span class="home__pressent anime-text">Hello, My name is</span>
         <h1 class="home__title anime-text">Vern Esg</h1>
         <span class="home__skill anime-text">Web Developer</span>
         <div><a href="#services" class="home__button anime-text">Bot Maker</a></div>
@@ -200,5 +240,27 @@
 
   <!-- ICONS -->
   <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
+
+  <!-- Music toggle script -->
+  <script>
+    // Reveal animated elements
+    window.addEventListener("DOMContentLoaded", () => {
+      document.querySelectorAll('.anime-text, .section, .home__img img, .home__button')
+        .forEach(el => el.style.opacity = 1);
+    });
+
+    const bgMusic = document.getElementById('bg-music');
+    const toggleBtn = document.querySelector('.music-toggle');
+
+    function toggleMusic() {
+      if (bgMusic.paused) {
+        bgMusic.play();
+        toggleBtn.textContent = "Pause Music";
+      } else {
+        bgMusic.pause();
+        toggleBtn.textContent = "Play Music";
+      }
+    }
+  </script>
 </body>
 </html>
