--- a/index.html
+++ b/index.html
@@ -230,6 +230,10 @@
       <p>Coming soon! Here I’ll share tips, tutorials, and insights into modern web development.</p>
     </section>
 
+     <section id="achievements" class="section">
+     <h2>achievements</h2>
+        <img src="https://i.imgur.com/MYk7E5V.jpg"
+
     <section id="contact" class="section">
       <h2>Contact</h2>
       <form action="https://formspree.io/f/your-form-id" method="POST">
