--- a/index.html
+++ b/index.html
@@ -232,7 +232,13 @@
 
      <section id="achievements" class="section">
      <h2>achievements</h2>
-        <img src="https://i.imgur.com/MYk7E5V.jpg"
+
+         <ul> 
+              <li>Achieving High shool Deploma</>
+              <li>Certified at online programming</>
+              <li>GitHub repository maker</>
+              <li>Second year College students</>
+          </ul>
 
     <section id="contact" class="section">
       <h2>Contact</h2>
