--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       font-family: 'Poppins', sans-serif;
       background: rgba(0, 0, 0, 0.7);
-      background-image: url('https://media3.giphy.com/media/1HUfqovo7QL594o5kh/giphy.gif');
+      background-image: url('https://media2.giphy.com/media/vd5TYfojHJ0n6/giphy.gif?cid=6c09b9526jiyo1up6yhnqv70wnnhzd49ejisinfxusa9f39u&ep=v1_internal_gif_by_id&rid=giphy.gif&ct=g');
       background-size: cover;
       background-attachment: fixed;
       color: #fff;
