--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <span class="home__pressent anime-text">Hello, My name is</span>
         <h1 class="home__title anime-text">Vern Esg</h1>
         <span class="home__skill anime-text">Web Developer</span>
-        <div><a href="#services" class="home__button anime-text">Bot Maker</a></div>
+        <div><a href="#services" class="home__button anime-text"></a></div>
       </div>
       <div class="home__img"><img src="https://i.imgur.com/bfELRaR.jpeg" alt="Profile Image" /></div>
       <div class="home__social">
