--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <title>My Personal Portfolio</title>
   <style>
     body {
@@ -49,11 +50,12 @@
       border-radius: 30px;
       cursor: pointer;
       font-weight: 500;
-      transition: background 0.3s ease;
+      transition: background 0.3s ease, box-shadow 0.3s ease;
     }
 
-    .home__button:hover, button[type="submit"]:hover {
+    .home__button:hover, button[type="submit"]:hover, .music-toggle:hover {
       background-color: #e91e63;
+      box-shadow: 0 0 15px #ff4081, 0 0 30px #ff4081;
     }
 
     input, textarea {
@@ -151,6 +153,16 @@
     .anime-text:nth-child(2) { animation-delay: 0.4s; }
     .anime-text:nth-child(3) { animation-delay: 0.6s; }
 
+    .section ul li {
+      animation: fadeInUp 0.6s ease forwards;
+      opacity: 0;
+    }
+
+    .section ul li:nth-child(1) { animation-delay: 0.3s; }
+    .section ul li:nth-child(2) { animation-delay: 0.5s; }
+    .section ul li:nth-child(3) { animation-delay: 0.7s; }
+    .section ul li:nth-child(4) { animation-delay: 0.9s; }
+
     .music-toggle {
       position: fixed;
       top: 20px;
@@ -186,6 +198,7 @@
           <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
           <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
           <li class="nav__item"><a href="#services" class="nav__link">Services</a></li>
+          <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
           <li class="nav__item"><a href="#blog" class="nav__link">Blog</a></li>
           <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
         </ul>
@@ -200,12 +213,17 @@
         <span class="home__pressent anime-text">Hello, My name is</span>
         <h1 class="home__title anime-text">Vern Esg</h1>
         <span class="home__skill anime-text">Web Developer</span>
-        
-      <div class="home__img"><img src="https://i.imgur.com/bfELRaR.jpeg" alt="Profile Image" /></div>
-      <div class="home__social">
-        <ion-icon name="logo-facebook" class="home__social-icon"></ion-icon>
-        <ion-icon name="logo-instagram" class="home__social-icon"></ion-icon>
-        <ion-icon name="logo-twitter" class="home__social-icon"></ion-icon>
+        <button class="home__button anime-text">Download CV</button>
+
+        <div class="home__social">
+          <ion-icon name="logo-facebook" class="home__social-icon"></ion-icon>
+          <ion-icon name="logo-instagram" class="home__social-icon"></ion-icon>
+          <ion-icon name="logo-twitter" class="home__social-icon"></ion-icon>
+        </div>
+      </div>
+
+      <div class="home__img">
+        <img src="https://i.imgur.com/bfELRaR.jpeg" alt="Profile Image" />
       </div>
     </div>
 
@@ -224,20 +242,53 @@
       </ul>
     </section>
 
+    <section id="skills" class="section">
+      <h2>Skills</h2>
+      <div style="display: flex; flex-wrap: wrap; gap: 1rem;">
+        <div style="flex: 1; min-width: 200px;">
+          <h4>Frontend</h4>
+          <ul>
+            <li><i class="fab fa-html5"></i> HTML5</li>
+            <li><i class="fab fa-css3-alt"></i> CSS3 & SCSS</li>
+            <li><i class="fab fa-js-square"></i> JavaScript</li>
+            <li><i class="fab fa-react"></i> React.js</li>
+          </ul>
+        </div>
+        <div style="flex: 1; min-width: 200px;">
+          <h4>Backend</h4>
+          <ul>
+            <li><i class="fab fa-node-js"></i> Node.js</li>
+            <li><i class="fas fa-server"></i> Express</li>
+            <li><i class="fab fa-php"></i> PHP</li>
+            <li><i class="fas fa-database"></i> MySQL</li>
+          </ul>
+        </div>
+        <div style="flex: 1; min-width: 200px;">
+          <h4>Tools</h4>
+          <ul>
+            <li><i class="fab fa-git-alt"></i> Git & GitHub</li>
+            <li><i class="fas fa-code"></i> VS Code</li>
+            <li><i class="fab fa-figma"></i> Figma</li>
+            <li><i class="fas fa-fire"></i> Firebase</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
     <section id="blog" class="section">
       <h2>Blog</h2>
       <p>Coming soon! Here I’ll share tips, tutorials, and insights into modern web development.</p>
     </section>
 
-     <section id="achievements" class="section">
-     <h2>achievements</h2>
-
-         <ul> 
-              <li>Achieving High shool Deploma</>
-              <li>Certified at online programming</>
-              <li>GitHub repository maker</>
-              <li>Second year College students</>
-          </ul>
+    <section id="achievements" class="section">
+      <h2>Achievements</h2>
+      <ul>
+        <li>Achieving High School Diploma</li>
+        <li>Certified in Online Programming</li>
+        <li>GitHub Repository Maker</li>
+        <li>Second-Year College Student</li>
+      </ul>
+    </section>
 
     <section id="contact" class="section">
       <h2>Contact</h2>
