--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
     .home__img img {
       max-width: 250px;
       border-radius: 50%;
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
+      border: 6px solid #00bfff; /* Blue border */
+      box-shadow: 0 0 20px rgba(0, 191, 255, 0.5);
     }
 
     .home__social {
@@ -183,7 +184,6 @@
       </div>
     </div>
 
-    <!-- Sections -->
     <section id="about" class="section" data-aos="fade-right">
       <h2>About Me</h2>
       <p>I am Vern Esg, a passionate web developer who builds clean and creative websites.</p>
