--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet"/>
   <title>My Personal Portfolio</title>
   <style>
     body {
@@ -41,19 +41,15 @@
       color: #ccc;
     }
 
-    .home__button, button[type="submit"] {
+    button[type="submit"] {
+      background-color: #2196f3;
+      color: white;
       border: none;
       padding: 0.75rem 1.5rem;
       border-radius: 30px;
       cursor: pointer;
       font-weight: 500;
       transition: background 0.3s ease;
-    }
-
-    /* New colors */
-    button[type="submit"] {
-      background-color: #2196f3; /* blue */
-      color: white;
     }
 
     button[type="submit"]:hover {
@@ -65,7 +61,7 @@
       top: 20px;
       right: 20px;
       z-index: 999;
-      background: #2196f3; /* blue */
+      background: #2196f3;
       color: white;
       padding: 0.5rem 1rem;
       border: none;
@@ -92,8 +88,8 @@
 
     form {
       max-width: 500px;
-      margin: 2rem auto; /* centers horizontally */
-      text-align: center; /* center text inside form */
+      margin: 2rem auto;
+      text-align: center;
       background: rgba(255, 255, 255, 0.1);
       padding: 1.5rem;
       border-radius: 20px;
@@ -175,17 +171,6 @@
       }
     }
 
-    @keyframes fadeInUp {
-      0% {
-        opacity: 0;
-        transform: translateY(20px);
-      }
-      100% {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
     .anime-text, .home__img img, .home__button {
       animation: fadeInUp 1s ease forwards;
       opacity: 0;
@@ -198,15 +183,29 @@
     #youtube-iframe {
       display: none;
     }
+
+    .skills-list {
+      list-style: none;
+      padding: 0;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 1rem;
+    }
+
+    .skills-list li {
+      background: rgba(255,255,255,0.1);
+      padding: 0.5rem 1rem;
+      border-radius: 12px;
+      border: 1px solid #2196f3;
+    }
   </style>
 </head>
 
 <body>
-  <!-- Music toggle button -->
   <button class="music-toggle" onclick="toggleYouTubeMusic()">Play Music</button>
   <iframe id="youtube-iframe" width="0" height="0" src="" frameborder="0" allow="autoplay" allowfullscreen></iframe>
 
-  <!-- HEADER -->
   <header class="l-header">
     <nav class="nav bd-grid">
       <div><a href="#" class="nav__logo">Programmer</a></div>
@@ -214,6 +213,7 @@
         <ul class="nav__list">
           <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
           <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
+          <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
           <li class="nav__item"><a href="#services" class="nav__link">Services</a></li>
           <li class="nav__item"><a href="#blog" class="nav__link">Blog</a></li>
           <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
@@ -222,28 +222,38 @@
     </nav>
   </header>
 
-  <!-- MAIN -->
   <main class="l-main bd-grid">
     <div class="home">
       <div class="home__information">
         <span class="home__pressent anime-text">Hello, My name is</span>
         <h1 class="home__title anime-text">Vern Esg</h1>
         <span class="home__skill anime-text">Web Developer</span>
-
         <div class="home__social">
           <ion-icon name="logo-facebook" class="home__social-icon"></ion-icon>
           <ion-icon name="logo-instagram" class="home__social-icon"></ion-icon>
           <ion-icon name="logo-twitter" class="home__social-icon"></ion-icon>
         </div>
       </div>
-
       <div class="home__img"><img src="https://i.imgur.com/bfELRaR.jpeg" alt="Profile Image" /></div>
     </div>
 
-    <!-- Sections -->
     <section id="about" class="section">
       <h2>About Me</h2>
       <p>I am Vern Esg, a passionate web developer who builds clean and creative websites.</p>
+    </section>
+
+    <section id="skills" class="section">
+      <h2>Skills</h2>
+      <ul class="skills-list">
+        <li>HTML & CSS</li>
+        <li>JavaScript</li>
+        <li>React</li>
+        <li>Node.js</li>
+        <li>PHP</li>
+        <li>MySQL</li>
+        <li>UI/UX Design</li>
+        <li>Git & GitHub</li>
+      </ul>
     </section>
 
     <section id="services" class="section">
@@ -281,10 +291,8 @@
     </section>
   </main>
 
-  <!-- ICONS -->
   <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
 
-  <!-- YouTube Music Player Script -->
   <script>
     let isPlaying = false;
     function toggleYouTubeMusic() {
@@ -302,7 +310,6 @@
       }
     }
 
-    // Scroll Animation Script
     const observer = new IntersectionObserver((entries) => {
       entries.forEach(entry => {
         if (entry.isIntersecting) {
