--- a/index.html
+++ b/index.html
@@ -268,8 +268,7 @@
       const button = document.querySelector(".music-toggle");
 
       if (!isPlaying) {
-        iframe.src = "https://www.youtube.com/embed/Ukko12nzYcI
-?autoplay=1&loop=1&playlist=JGwWNGJdvx8";
+        iframe.src = "https://www.youtube.com/embed/JGwWNGJdvx8?autoplay=1&loop=1&playlist=Ukko12nzYcI";
         button.textContent = "Pause Music";
         isPlaying = true;
       } else {
