--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     <div class="home" data-aos="fade-up">
       <div class="home__information">
         <span class="home__pressent">Hello, My name is</span>
-        <h1 class="home__title">Vern Esg</h1>
+        <h1 class="home__title">Vernie Esgana</h1>
         <span class="home__skill">Web Developer</span>
         <div class="home__social">
           <ion-icon name="logo-facebook" class="home__social-icon"></ion-icon>
@@ -187,7 +187,7 @@
     <!-- Sections -->
     <section id="about" class="section" data-aos="fade-right">
       <h2>About Me</h2>
-      <p>I am Vern Esg, a passionate web developer who builds clean and creative websites.</p>
+      <p>I am Vernie Esgana,20 years old a junior web developer from Bantayan Island‚ Cebu who builds clean and creative websites.</p>
     </section>
 
     <section id="services" class="section" data-aos="fade-left">
