--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     <!-- Sections -->
     <section id="about" class="section" data-aos="fade-right">
       <h2>About Me</h2>
-      <p>I am Vernie Esgana,20 years old a junior web developer from Bantayan Island‚ Cebu who builds clean and creative websites.</p>
+      <p>I am Vernie Esgana, 20 years old a junior web developer from Bantayan Island‚ Cebu who builds simple but clean websites.</p>
     </section>
 
     <section id="services" class="section" data-aos="fade-left">
